Prizes photos look good on on mobile, will need to fix desktop

--- a/resources/sass/prizes/prizes.scss
+++ b/resources/sass/prizes/prizes.scss
@@ -30,7 +30,7 @@ img {
     margin: 0;
     padding: 0;
 }
-
+.card
 .cards_item {
     display: flex;
     padding: 1rem;
@@ -49,7 +49,7 @@ img {
 }
 
 .card {
-    //background-color: white;
+    background-color: transparent;
     border-radius: 0.25rem;
     box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
     display: flex;
